--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,4 +1,5 @@
 @import './fonts';
+@import './variables';
 
 #bootstrap-override {
     .navbar {
@@ -12,7 +13,58 @@
             transition: color 0.5s ease-out;
 
             &:hover {
-                color: #d9c7bd;
+                color: white;
+            }
+        }
+    }
+}
+
+@media (max-width: $lg){
+    #bootstrap-override {
+        .navbar {
+            padding-bottom: 20px;
+
+            .navbar-brand {
+                img {
+                    width: 50%;
+                }
+            }
+            .navbar-toggler {
+                margin-right: 50px;
+                border: none;
+                color: #9f554a;
+
+                .my-navbar-toggler-icon{
+                    img {
+                        width: 25px;
+                    }
+                }
+
+            }
+            .navbar-nav {
+                background-color: #9f554a;
+                margin: 10px 5% 0;
+
+                .nav-link {
+                    color: white;
+                    margin-right: 15px;
+                    transition: color 0.5s ease-out;
+                    text-align: right;
+                    font-size: 25px;
+                    font-family: FactoriaBook;
+                    padding: 10px;
+                }
+            }
+           
+        }
+    }
+}
+
+@media (max-width: $sm){
+    #bootstrap-override {
+        .navbar {
+            .navbar-toggler {
+                margin-right: 20px;
             }
         }
     }
