--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -3,17 +3,19 @@
 
 #bootstrap-override {
     .navbar {
+        background: $secondaryColor;
+        
         .navbar-brand {
             margin-left: 20px;
         }
         .nav-link {
-            color: #9f554a;
+            color: $primaryColor;
             font-family: FactoriaBold;
             margin-right: 15px;
             transition: color 0.5s ease-out;
 
             &:hover {
-                color: white;
+                color: $thirdColor;
             }
         }
     }
@@ -32,7 +34,7 @@
             .navbar-toggler {
                 margin-right: 50px;
                 border: none;
-                color: #9f554a;
+                color: $primaryColor;
 
                 .my-navbar-toggler-icon{
                     img {
@@ -42,7 +44,7 @@
 
             }
             .navbar-nav {
-                background-color: #9f554a;
+                background-color: $primaryColor;
                 margin: 10px 5% 0;
 
                 .nav-link {
