--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -53,7 +53,7 @@
                     transition: color 0.5s ease-out;
                     text-align: right;
                     font-size: 25px;
-                    font-family: FactoriaBook;
+                    font-family: FactoriaMedium;
                     padding: 10px;
                 }
             }
