fixed imgs on gh pages

--- a/scss/components/_order.scss
+++ b/scss/components/_order.scss
@@ -3,7 +3,7 @@
 
 #bootstrap-override {
     .order {
-        background-image: url('../../img/desktop/cutiepies-pizza-1.jpg');
+        background-image: url('../img/desktop/cutiepies-pizza-1.jpg');
         background-size: cover;
         background-position: right;
         height: 90vh;
