--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import './settings/fonts';
 @import './components/navbar';
 @import './components/order';
+@import './components/carousel';
 
 *, *::after, *::before{
     margin: 0;
