--- a/scss/components/_order.scss
+++ b/scss/components/_order.scss
@@ -52,3 +52,34 @@
         }
     }
 }
+
+@media (max-width: $md) {
+    #bootstrap-override {
+        .order {
+            background: $grey;
+            height: 100vh;
+
+            .bcground--mobile {
+                background-image: url('../../img/mobile/cutiepies-pizza-1-xs.jpg');
+                background-size: cover;
+                background-position: bottom;
+                height: 35%;
+                width: 100vw;
+                position: absolute;
+                top: 0;
+            }
+
+            .content {
+                text-align: center;
+                width: 100vw;
+                margin: 0;
+
+                h1 {
+                    margin-top: 200px;
+                }
+
+            }
+
+        }
+    }
+}
