changed nav bcg color

--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -3,7 +3,7 @@
 
 #bootstrap-override {
     .navbar {
-        background: $secondaryColor;
+        background: $darkGrey;
         
         .navbar-brand {
             margin-left: 20px;
