--- a/scss/style.css
+++ b/scss/style.css
@@ -59,7 +59,7 @@
 }
 
 #bootstrap-override .navbar {
-  background: black;
+  background: #1c1c1e;
 }
 
 #bootstrap-override .navbar .navbar-brand {
