fixed imgs on gh pages

--- a/scss/components/_order.scss
+++ b/scss/components/_order.scss
@@ -60,7 +60,7 @@
             height: 100vh;
 
             .bcground--mobile {
-                background-image: url('../../img/mobile/cutiepies-pizza-1-xs.jpg');
+                background-image: url('../img/mobile/cutiepies-pizza-1-xs.jpg');
                 background-size: cover;
                 background-position: bottom;
                 height: 35%;
