added reservation section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import './components/order';
 @import './components/carousel';
 @import './components/menu';
+@import './components/reservation';
 
 *, *::after, *::before{
     margin: 0;
