--- a/scss/style.css
+++ b/scss/style.css
@@ -421,6 +421,125 @@
   }
 }
 
+@font-face {
+  font-family: FactoriaBold;
+  src: url("../fonts/Factoria-Bold.otf");
+}
+
+@font-face {
+  font-family: FactoriaBook;
+  src: url("../fonts/Factoria-Book.otf");
+}
+
+@font-face {
+  font-family: FactoriaMedium;
+  src: url("../fonts/Factoria-Medium.otf");
+}
+
+@font-face {
+  font-family: HanleyRoughScript;
+  src: url("../fonts/HanleyRough-Script.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansFive;
+  src: url("../fonts/TrendRoughSansFive.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansOne;
+  src: url("../fonts/TrendRoughSansOne.otf");
+}
+
+#bootstrap-override .reservation {
+  background: #666;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#bootstrap-override .reservation .reservation__img {
+  padding: 0;
+  height: 100%;
+  min-height: 400px;
+}
+
+#bootstrap-override .reservation .reservation__img img {
+  width: 100%;
+  height: 100%;
+}
+
+#bootstrap-override .reservation .content__reservation {
+  text-align: left;
+  margin: 0;
+  height: 100%;
+  min-height: 300px;
+  padding: 0;
+}
+
+#bootstrap-override .reservation .content__reservation h1 {
+  color: white;
+  font-family: TrendRoughSansOne;
+  font-size: 50px;
+  margin: 0 0 25px 70px;
+}
+
+#bootstrap-override .reservation .content__reservation p {
+  color: white;
+  font-family: FactoriaBook;
+  font-size: 20px;
+  margin-left: 70px;
+}
+
+#bootstrap-override .reservation .content__reservation button {
+  margin-left: 60px;
+}
+
+#bootstrap-override .reservation .content__reservation button a {
+  color: white;
+  border: solid 2px white;
+  border-radius: 30px;
+  font-size: 18px;
+  font-family: FactoriaBook;
+  padding: 7px 50px 10px;
+  text-decoration: none;
+  -webkit-transition: background 0.2s ease-out;
+  transition: background 0.2s ease-out;
+}
+
+#bootstrap-override .reservation .content__reservation button a:hover {
+  background: white;
+  border: solid 2px white;
+}
+
+@media (max-width: 992px) {
+  #bootstrap-override .reservation {
+    height: 100%;
+  }
+  #bootstrap-override .reservation .content__reservation {
+    text-align: center;
+    width: 100vw;
+    margin: 0;
+    padding: 20px 0;
+  }
+  #bootstrap-override .reservation .content__reservation h1, #bootstrap-override .reservation .content__reservation p, #bootstrap-override .reservation .content__reservation button {
+    margin: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  #bootstrap-override .reservation .content__reservation {
+    margin-top: -150px;
+  }
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
