added cheese section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import './components/carousel';
 @import './components/menu';
 @import './components/reservation';
+@import './components/cheese';
 
 *, *::after, *::before{
     margin: 0;
