--- a/scss/style.css
+++ b/scss/style.css
@@ -540,6 +540,44 @@
   }
 }
 
+@font-face {
+  font-family: FactoriaBold;
+  src: url("../fonts/Factoria-Bold.otf");
+}
+
+@font-face {
+  font-family: FactoriaBook;
+  src: url("../fonts/Factoria-Book.otf");
+}
+
+@font-face {
+  font-family: FactoriaMedium;
+  src: url("../fonts/Factoria-Medium.otf");
+}
+
+@font-face {
+  font-family: HanleyRoughScript;
+  src: url("../fonts/HanleyRough-Script.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansFive;
+  src: url("../fonts/TrendRoughSansFive.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansOne;
+  src: url("../fonts/TrendRoughSansOne.otf");
+}
+
+#bootstrap-override .cheese {
+  background-image: url("../img/desktop/cheese-background.jpg");
+  background-position: top;
+  background-size: cover;
+  width: 100vw;
+  height: 200px;
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
