--- a/scss/components/_cheese.scss
+++ b/scss/components/_cheese.scss
@@ -1,4 +1,3 @@
-@import '../settings/fonts';
 @import '../settings/variables';
 
 #bootstrap-override {
@@ -8,5 +7,13 @@
         background-size: cover;
         width: 100vw;
         height: 200px;
+    }
+}
+
+@media (max-width: $sm) {
+    #bootstrap-override {
+        .cheese {
+            height: 80vw;
+        }
     }
 }
