fixed imgs on gh pages

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -61,7 +61,7 @@
             height: 100%;
 
             .bcground__menu--mobile {
-                background-image: url('../../img/mobile/cutiepies-pizza-2-xs.jpg');
+                background-image: url('../img/mobile/cutiepies-pizza-2-xs.jpg');
                 background-size: cover;
                 background-position: bottom;
                 height: 35%;
