--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import './components/menu';
 @import './components/reservation';
 @import './components/cheese';
+@import './components/drinks';
 
 *, *::after, *::before{
     margin: 0;
