added happy hour section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 @import './components/reservation';
 @import './components/cheese';
 @import './components/drinks';
+@import './components/happyhour';
 
 *, *::after, *::before{
     margin: 0;
