--- a/scss/style.css
+++ b/scss/style.css
@@ -660,6 +660,110 @@
   }
 }
 
+@font-face {
+  font-family: FactoriaBold;
+  src: url("../fonts/Factoria-Bold.otf");
+}
+
+@font-face {
+  font-family: FactoriaBook;
+  src: url("../fonts/Factoria-Book.otf");
+}
+
+@font-face {
+  font-family: FactoriaMedium;
+  src: url("../fonts/Factoria-Medium.otf");
+}
+
+@font-face {
+  font-family: HanleyRoughScript;
+  src: url("../fonts/HanleyRough-Script.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansFive;
+  src: url("../fonts/TrendRoughSansFive.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansOne;
+  src: url("../fonts/TrendRoughSansOne.otf");
+}
+
+#bootstrap-override .happy_hour {
+  width: 100vw;
+  height: 300px;
+  background-color: #242426;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#bootstrap-override .happy_hour .content {
+  min-width: 60vw;
+  height: 150px;
+  border: solid 1px #666;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#bootstrap-override .happy_hour .content h1 {
+  color: #666;
+  font-family: HanleyRoughScript;
+  padding: 10px 100px 10px 10px;
+  border-right: 2px solid #9f554a;
+  font-size: 50px;
+}
+
+#bootstrap-override .happy_hour .content span {
+  margin-left: 50px;
+  padding-right: 10px;
+}
+
+#bootstrap-override .happy_hour .content span p {
+  color: white;
+}
+
+#bootstrap-override .happy_hour .content span .p__styled {
+  color: #9f554a;
+  font-size: 25px;
+}
+
+@media (max-width: 768px) {
+  #bootstrap-override .happy_hour {
+    height: 400px;
+  }
+  #bootstrap-override .happy_hour .content {
+    border: none;
+    width: 100vw;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #bootstrap-override .happy_hour .content h1 {
+    border: none;
+    padding: 10px;
+    text-align: center;
+  }
+  #bootstrap-override .happy_hour .content span p {
+    text-align: center;
+  }
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
