--- a/scss/style.css
+++ b/scss/style.css
@@ -764,6 +764,132 @@
   }
 }
 
+@font-face {
+  font-family: FactoriaBold;
+  src: url("../fonts/Factoria-Bold.otf");
+}
+
+@font-face {
+  font-family: FactoriaBook;
+  src: url("../fonts/Factoria-Book.otf");
+}
+
+@font-face {
+  font-family: FactoriaMedium;
+  src: url("../fonts/Factoria-Medium.otf");
+}
+
+@font-face {
+  font-family: HanleyRoughScript;
+  src: url("../fonts/HanleyRough-Script.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansFive;
+  src: url("../fonts/TrendRoughSansFive.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansOne;
+  src: url("../fonts/TrendRoughSansOne.otf");
+}
+
+#bootstrap-override .parties {
+  background: #9f554a;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#bootstrap-override .parties .parties__img {
+  padding: 0;
+  height: 100%;
+  min-height: 400px;
+}
+
+#bootstrap-override .parties .parties__img img {
+  width: 100%;
+  height: 100%;
+}
+
+#bootstrap-override .parties .content__parties {
+  text-align: right;
+  margin: 0;
+  height: 100%;
+  min-height: 300px;
+  padding: 0;
+}
+
+#bootstrap-override .parties .content__parties h1 {
+  color: white;
+  font-family: TrendRoughSansOne;
+  font-size: 50px;
+  margin: 0 7% 25px 0;
+}
+
+#bootstrap-override .parties .content__parties p {
+  color: white;
+  font-family: FactoriaBook;
+  font-size: 20px;
+  margin-right: 7%;
+}
+
+#bootstrap-override .parties .content__parties button {
+  margin-right: 6%;
+}
+
+#bootstrap-override .parties .content__parties button a {
+  color: white;
+  border: solid 2px white;
+  border-radius: 30px;
+  font-size: 18px;
+  font-family: FactoriaBook;
+  padding: 7px 50px 10px;
+  text-decoration: none;
+  -webkit-transition: background 0.2s ease-out;
+  transition: background 0.2s ease-out;
+}
+
+#bootstrap-override .parties .content__parties button a:hover {
+  background: white;
+  border: solid 2px white;
+}
+
+@media (max-width: 992px) {
+  #bootstrap-override .parties {
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  #bootstrap-override .parties .content__parties {
+    text-align: center;
+    width: 100vw;
+    margin: 0;
+    padding: 20px 0;
+  }
+  #bootstrap-override .parties .content__parties h1, #bootstrap-override .parties .content__parties p, #bootstrap-override .parties .content__parties button {
+    margin: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  #bootstrap-override .parties .content__parties {
+    margin-top: -150px;
+  }
+  #bootstrap-override .parties .content__parties h1 {
+    font-size: 40px;
+  }
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
