--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 @import './components/cheese';
 @import './components/drinks';
 @import './components/happyhour';
+@import './components/parties';
 
 *, *::after, *::before{
     margin: 0;
