--- a/scss/style.css
+++ b/scss/style.css
@@ -890,6 +890,107 @@
   }
 }
 
+@font-face {
+  font-family: FactoriaBold;
+  src: url("../fonts/Factoria-Bold.otf");
+}
+
+@font-face {
+  font-family: FactoriaBook;
+  src: url("../fonts/Factoria-Book.otf");
+}
+
+@font-face {
+  font-family: FactoriaMedium;
+  src: url("../fonts/Factoria-Medium.otf");
+}
+
+@font-face {
+  font-family: HanleyRoughScript;
+  src: url("../fonts/HanleyRough-Script.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansFive;
+  src: url("../fonts/TrendRoughSansFive.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansOne;
+  src: url("../fonts/TrendRoughSansOne.otf");
+}
+
+#bootstrap-override .story {
+  background: #666;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#bootstrap-override .story .story__img {
+  padding: 0;
+  height: 100%;
+  min-height: 400px;
+}
+
+#bootstrap-override .story .story__img img {
+  width: 100%;
+  height: 100%;
+}
+
+#bootstrap-override .story .content__story {
+  text-align: left;
+  margin: 0;
+  height: 100%;
+  min-height: 300px;
+  padding: 0;
+  width: 40%;
+}
+
+#bootstrap-override .story .content__story h1 {
+  color: white;
+  font-family: TrendRoughSansFive;
+  font-size: 50px;
+  margin: 0 0 25px 7%;
+}
+
+#bootstrap-override .story .content__story p {
+  color: white;
+  font-family: FactoriaBook;
+  font-size: 20px;
+  margin-left: 7%;
+  width: 90%;
+}
+
+@media (max-width: 992px) {
+  #bootstrap-override .story {
+    height: 100%;
+  }
+  #bootstrap-override .story .content__story {
+    text-align: center;
+    width: 100vw;
+    margin: 0;
+    padding: 20px 0;
+  }
+  #bootstrap-override .story .content__story h1, #bootstrap-override .story .content__story p {
+    margin: 0 auto;
+    width: 90%;
+  }
+}
+
+@media (max-width: 576px) {
+  #bootstrap-override .story .content__story {
+    margin-top: -150px;
+  }
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
