--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
 @import './components/drinks';
 @import './components/happyhour';
 @import './components/parties';
+@import './components/story';
 
 *, *::after, *::before{
     margin: 0;
