--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @import './components/happyhour';
 @import './components/parties';
 @import './components/story';
+@import './components/footer';
 
 *, *::after, *::before{
     margin: 0;
