--- a/scss/style.css
+++ b/scss/style.css
@@ -991,6 +991,144 @@
   }
 }
 
+@font-face {
+  font-family: FactoriaBold;
+  src: url("../fonts/Factoria-Bold.otf");
+}
+
+@font-face {
+  font-family: FactoriaBook;
+  src: url("../fonts/Factoria-Book.otf");
+}
+
+@font-face {
+  font-family: FactoriaMedium;
+  src: url("../fonts/Factoria-Medium.otf");
+}
+
+@font-face {
+  font-family: HanleyRoughScript;
+  src: url("../fonts/HanleyRough-Script.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansFive;
+  src: url("../fonts/TrendRoughSansFive.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansOne;
+  src: url("../fonts/TrendRoughSansOne.otf");
+}
+
+#bootstrap-override footer {
+  width: 100vw;
+  height: 300px;
+  background-color: #1c1c1e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+}
+
+#bootstrap-override footer .content {
+  min-width: 60vw;
+  height: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-top: 30px;
+}
+
+#bootstrap-override footer .content p {
+  color: #9f554a;
+  padding: 10px 150px 10px 100px;
+  font-size: 20px;
+  line-height: 40px;
+  font-family: FactoriaBook;
+}
+
+#bootstrap-override footer .content .p__styled {
+  border-right: 2px solid #9f554a;
+  padding-top: 0px;
+  padding-bottom: 30px;
+}
+
+#bootstrap-override footer span {
+  color: #666;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: FactoriaBook;
+  font-size: 15px;
+  margin: 80px 0 0 50%;
+  width: 100%;
+}
+
+#bootstrap-override footer span a img {
+  width: 30px;
+  text-align: right;
+  padding: 0 0 0 10px;
+}
+
+#bootstrap-override footer span .a__styled {
+  margin-left: 25%;
+}
+
+@media (max-width: 768px) {
+  #bootstrap-override footer {
+    min-height: 500px;
+  }
+  #bootstrap-override footer .content {
+    width: 100vw;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #bootstrap-override footer .content .p__styled, #bootstrap-override footer .content p {
+    border: none;
+    padding: 10px;
+    text-align: left;
+  }
+  #bootstrap-override footer span {
+    margin: 150px 0 0 0;
+    text-align: center;
+  }
+  #bootstrap-override footer span a img {
+    position: absolute;
+    bottom: 130px;
+    left: 55%;
+  }
+  #bootstrap-override footer span .a__styled {
+    margin-left: 0;
+  }
+  #bootstrap-override footer span .a__styled img {
+    left: 35%;
+  }
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
