added drinks menu

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
 @import './components/parties';
 @import './components/story';
 @import './components/footer';
+@import './components/subsiteDrinks';
 
 *, *::after, *::before{
     margin: 0;
