--- a/scss/style.css
+++ b/scss/style.css
@@ -1129,6 +1129,53 @@
   }
 }
 
+@font-face {
+  font-family: FactoriaBold;
+  src: url("../fonts/Factoria-Bold.otf");
+}
+
+@font-face {
+  font-family: FactoriaBook;
+  src: url("../fonts/Factoria-Book.otf");
+}
+
+@font-face {
+  font-family: FactoriaMedium;
+  src: url("../fonts/Factoria-Medium.otf");
+}
+
+@font-face {
+  font-family: HanleyRoughScript;
+  src: url("../fonts/HanleyRough-Script.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansFive;
+  src: url("../fonts/TrendRoughSansFive.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansOne;
+  src: url("../fonts/TrendRoughSansOne.otf");
+}
+
+#bootstrap-override .drinksContent {
+  width: 100vw;
+  min-height: 100vh;
+  height: 100%;
+}
+
+#bootstrap-override .drinksContent img {
+  width: 100vw;
+  height: 100%;
+}
+
+@media (max-width: 768px) {
+  #bootstrap-override .drinksContent img {
+    margin-top: 50px;
+  }
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
