added active class to nav

--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -18,6 +18,13 @@
                 color: $thirdColor;
             }
         }
+
+        .active {
+            .nav-link {
+                color: $thirdColor;
+                cursor: default;
+            }
+        }
     }
 }
 
