--- a/scss/style.css
+++ b/scss/style.css
@@ -1181,6 +1181,160 @@
   }
 }
 
+@font-face {
+  font-family: FactoriaBold;
+  src: url("../fonts/Factoria-Bold.otf");
+}
+
+@font-face {
+  font-family: FactoriaBook;
+  src: url("../fonts/Factoria-Book.otf");
+}
+
+@font-face {
+  font-family: FactoriaMedium;
+  src: url("../fonts/Factoria-Medium.otf");
+}
+
+@font-face {
+  font-family: HanleyRoughScript;
+  src: url("../fonts/HanleyRough-Script.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansFive;
+  src: url("../fonts/TrendRoughSansFive.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansOne;
+  src: url("../fonts/TrendRoughSansOne.otf");
+}
+
+#bootstrap-override .contentContact {
+  width: 100vw;
+  min-height: 70vh;
+  height: 100%;
+  background: #1c1c1e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#bootstrap-override .contentContact h1 {
+  color: white;
+  font-family: TrendRoughSansFive;
+  font-size: 50px;
+  padding: 100px;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  margin-top: 20px;
+}
+
+#bootstrap-override .contentContact form {
+  width: 100%;
+  max-width: 800px;
+  margin-top: 10px;
+}
+
+#bootstrap-override .contentContact form .form__input {
+  background: none;
+  color: #666;
+  padding: 15px 60px 15px 15px;
+  border: 2px solid #666;
+  margin: 10px;
+  width: 100%;
+  max-width: 250px;
+}
+
+#bootstrap-override .contentContact form .form__textarea {
+  max-width: 605px;
+  height: 120px;
+  resize: none;
+}
+
+#bootstrap-override .contentContact form button {
+  color: white;
+  background-color: #666;
+  padding: 10px 20px;
+  float: right;
+  border-radius: 0;
+  margin-right: 13%;
+}
+
+@media (max-width: 1200px) {
+  #bootstrap-override .contentContact form {
+    max-width: 600px;
+  }
+  #bootstrap-override .contentContact form .form__input {
+    max-width: 150px;
+  }
+  #bootstrap-override .contentContact form .form__textarea {
+    max-width: 405px;
+  }
+}
+
+@media (max-width: 992px) {
+  #bootstrap-override .contentContact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  #bootstrap-override .contentContact h1 {
+    padding: 20px 15%;
+  }
+  #bootstrap-override .contentContact h1 br {
+    display: none;
+  }
+  #bootstrap-override .contentContact form {
+    max-width: 90vw;
+    text-align: center;
+  }
+  #bootstrap-override .contentContact form .form__input {
+    max-width: 200px;
+  }
+  #bootstrap-override .contentContact form .form__textarea {
+    max-width: 505px;
+  }
+}
+
+@media (max-width: 768px) {
+  #bootstrap-override .contentContact h1 {
+    margin-top: 100px;
+  }
+  #bootstrap-override .contentContact form {
+    width: 90vw;
+  }
+  #bootstrap-override .contentContact form .form__input {
+    width: 70vw;
+  }
+  #bootstrap-override .contentContact form .form__textarea {
+    width: 54vw;
+  }
+}
+
+@media (max-width: 576px) {
+  #bootstrap-override .contentContact h1 {
+    margin-top: 100px;
+    padding: 20px;
+    font-size: 40px;
+  }
+  #bootstrap-override .contentContact form .form__input {
+    width: 54vw;
+  }
+  #bootstrap-override .contentContact form .form__textarea {
+    width: 54vw;
+  }
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
