--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,7 @@
 @import './components/story';
 @import './components/footer';
 @import './components/subsiteDrinks';
+@import './components/subsiteContact';
 
 *, *::after, *::before{
     margin: 0;
