--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
 @import './components/footer';
 @import './components/subsiteDrinks';
 @import './components/subsiteContact';
+@import './components/subsiteParties';
 
 *, *::after, *::before{
     margin: 0;
