added menu few positions

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,7 @@
 @import './components/subsiteDrinks';
 @import './components/subsiteContact';
 @import './components/subsiteParties';
+@import './components/subsiteMenu';
 
 *, *::after, *::before{
     margin: 0;
