--- a/scss/style.css
+++ b/scss/style.css
@@ -1519,6 +1519,122 @@
   }
 }
 
+@font-face {
+  font-family: FactoriaBold;
+  src: url("../fonts/Factoria-Bold.otf");
+}
+
+@font-face {
+  font-family: FactoriaBook;
+  src: url("../fonts/Factoria-Book.otf");
+}
+
+@font-face {
+  font-family: FactoriaMedium;
+  src: url("../fonts/Factoria-Medium.otf");
+}
+
+@font-face {
+  font-family: HanleyRoughScript;
+  src: url("../fonts/HanleyRough-Script.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansFive;
+  src: url("../fonts/TrendRoughSansFive.otf");
+}
+
+@font-face {
+  font-family: TrendRoughSansOne;
+  src: url("../fonts/TrendRoughSansOne.otf");
+}
+
+#bootstrap-override .menuContent {
+  width: 100vw;
+  min-height: 100vh;
+  height: 100%;
+  background: #1c1c1e;
+  position: relative;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_img {
+  padding: 0;
+  height: 100%;
+  min-height: 400px;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_img img {
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items {
+  margin: 0;
+  height: 100%;
+  min-height: 400px;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 10%;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items p {
+  color: white;
+  margin-left: 20%;
+  line-height: 23px;
+  margin-right: 50px;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items .menu_item_name {
+  font-size: 22px;
+  margin: 0;
+  margin-left: 20%;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items .menu_item_content {
+  font-family: FactoriaBook;
+  margin-bottom: 10px;
+  font-size: 17px;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items .menu_item_info {
+  color: #666;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items .menu_item_info--red {
+  color: #9f554a;
+}
+
+#bootstrap-override .menuContent .menu_position--light {
+  background-color: #242426;
+}
+
+#bootstrap-override .menuContent .menu_position--first {
+  margin-top: 100px;
+}
+
+@media (max-width: 992px) {
+  #bootstrap-override .menuContent .menu_position--first {
+    margin-top: 50px;
+  }
+  #bootstrap-override .menuContent .menu_position .menu_items {
+    min-height: 500px;
+  }
+  #bootstrap-override .menuContent .menu_position .menu_items p, #bootstrap-override .menuContent .menu_position .menu_items .menu_item_name {
+    margin-left: 30px;
+    margin-right: 20px;
+  }
+}
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
