--- a/scss/style.css
+++ b/scss/style.css
@@ -1614,12 +1614,188 @@
   color: #9f554a;
 }
 
+#bootstrap-override .menuContent .menu_position .menu_img--speciality .specialty-pizzas-mobile {
+  display: none;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_img--speciality .specialty-pizzas {
+  width: 100%;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza {
+  background-color: #242426;
+  min-height: 600px;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza .menu_item_info {
+  color: #9f554a;
+  margin-left: 5%;
+  padding: 50px 0;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza .col-lg-4 {
+  padding: 0;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza .col-lg-4 p {
+  color: white;
+  margin-left: 20%;
+  line-height: 23px;
+  margin-right: 50px;
+  width: 60%;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza .col-lg-4 .menu_item_name {
+  font-size: 22px;
+  margin: 0;
+  margin-left: 20%;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza .col-lg-4 .menu_item_content {
+  font-family: FactoriaBook;
+  margin-bottom: 10px;
+  font-size: 17px;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add {
+  width: 100%;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  margin: 0 auto;
+  background-color: #242426;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add p {
+  line-height: 23px;
+  margin: 0;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add .menu_item_info {
+  color: white;
+  font-size: 20px;
+  margin-top: 50px;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add .menu_item_info-add {
+  color: #666;
+  font-family: FactoriaBook;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add .menu_item_info-end {
+  color: #666;
+  font-size: 20px;
+  margin: 50px 0;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add .col-lg-4 {
+  padding: 0 3%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  text-align: left;
+  width: 25%;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add .col-lg-4 p {
+  line-height: 23px;
+  margin: 0;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add .col-lg-4 .menu_item_name {
+  font-size: 22px;
+  margin: 0;
+  padding-top: 50px;
+  color: #666;
+  padding-bottom: 20px;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add .col-lg-4 .col-lg-2 {
+  padding: 0 2%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 45%;
+  float: left;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add .col-lg-4 .col-lg-2 .menu_item_content {
+  color: white;
+  font-size: 17px;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items-pizza-add .col-lg-4 .pizza-border {
+  border-right: 2px solid #666;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items_sides {
+  min-height: 400px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#bootstrap-override .menuContent .menu_position .menu_items_sides p {
+  font-size: 22px;
+  margin: 0;
+  color: white;
+  padding: 0 20px 15px;
+  width: 80%;
+  text-align: center;
+  line-height: 23px;
+}
+
 #bootstrap-override .menuContent .menu_position--light {
   background-color: #242426;
 }
 
 #bootstrap-override .menuContent .menu_position--first {
   margin-top: 100px;
+}
+
+#bootstrap-override .menuContent .headerpizza {
+  background-color: #666;
+  width: 100vw;
+  height: 120px;
+  text-align: center;
+}
+
+#bootstrap-override .menuContent .headerpizza h1 {
+  color: white;
+  font-family: HanleyRoughScript;
+  padding-top: 35px;
+  font-size: 50px;
+}
+
+#bootstrap-override .menuContent .headerpizza--sides {
+  background-color: #9f554a;
+}
+
+#bootstrap-override .menuContent .headerpizza--sides h1 {
+  font-family: TrendRoughSansFive;
 }
 
 @media (max-width: 992px) {
@@ -1632,6 +1808,44 @@
   #bootstrap-override .menuContent .menu_position .menu_items p, #bootstrap-override .menuContent .menu_position .menu_items .menu_item_name {
     margin-left: 30px;
     margin-right: 20px;
+  }
+  #bootstrap-override .menuContent .menu_position .menu_img--speciality .specialty-pizzas-mobile {
+    display: block;
+    width: 100vw;
+  }
+  #bootstrap-override .menuContent .menu_position .menu_img--speciality .specialty-pizzas {
+    display: none;
+  }
+  #bootstrap-override .menuContent .menu_position .menu_items-pizza .menu_item_info {
+    padding: 30px 0;
+  }
+  #bootstrap-override .menuContent .menu_position .menu_items-pizza .col-lg-4 p, #bootstrap-override .menuContent .menu_position .menu_items-pizza .col-lg-4 .menu_item_name {
+    margin-left: 30px;
+    margin-right: 20px;
+    width: 90%;
+  }
+  #bootstrap-override .menuContent .menu_position .menu_items-pizza-add .col-lg-4 {
+    width: 100%;
+    padding: 0 5%;
+  }
+  #bootstrap-override .menuContent .menu_position .menu_items-pizza-add .col-lg-4 .menu_item_name {
+    margin-left: 20px;
+  }
+  #bootstrap-override .menuContent .menu_position .menu_items-pizza-add .col-lg-4 .pizza-border {
+    border: none;
+  }
+  #bootstrap-override .menuContent .headerpizza {
+    height: 200px;
+  }
+  #bootstrap-override .menuContent .headerpizza h1 {
+    font-size: 40px;
+    padding-top: 45px;
+  }
+  #bootstrap-override .menuContent .headerpizza--sides {
+    height: 120px;
+  }
+  #bootstrap-override .menuContent .headerpizza--sides h1 {
+    padding-top: 35px;
   }
 }
 
